--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.13.1",
+    "img": "^3.0.3",
     "nuxt": "^2.15.2"
   },
   "devDependencies": {
